# meme-generator

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
.github/workflows/: docker.yml  release.yaml  server.yaml  sync.yaml  update.yml
docker/: config.toml.template  start.sh
meme_generator/: config.py  tags.py  utils.py
meme_generator/memes/Idol_heartbeat/: __init__.py
meme_generator/memes/aircraft_cup_air_play/: __init__.py
meme_generator/memes/aircraft_cup_cleaning_liquid/: __init__.py
meme_generator/memes/aircraft_cup_commemorative_edition_saint_sister/: __init__.py
meme_generator/memes/aircraft_cup_hoshino_alice/: __init__.py
meme_generator/memes/aircraft_cup_limited_edition_saint_sister/: __init__.py
meme_generator/memes/aircraft_cup_pure_buttocks/: __init__.py
meme_generator/memes/aircraft_cup_saint_sister/: __init__.py
meme_generator/memes/aircraft_cup_selena/: __init__.py
meme_generator/memes/all_the_days/: __init__.py
meme_generator/memes/atri_like/: __init__.py
meme_generator/memes/begged_me/: __init__.py
meme_generator/memes/behead/: __init__.py
meme_generator/memes/big_do/: __init__.py
meme_generator/memes/can_can_need/: __init__.py
meme_generator/memes/celebrate_the_new_year/: __init__.py
meme_generator/memes/congyu_dislike/: __init__.py
meme_generator/memes/cool_blanket/: __init__.py
meme_generator/memes/deer/: __init__.py
meme_generator/memes/deer_help/: __init__.py
resources/: resource_list.json
(+60 files in other folders)
