[tool.poetry]
name = "meme-generator"
version = "0.2.0"
description = "Python package for making fun pictures"
authors = ["ClarityJS <3369906077@qq.com>", "meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ClarityJS/meme-generator"
repository = "https://github.com/ClarityJS/meme-generator"
exclude = [
    "meme_generator/memes/*.{jpg,png,gif}"
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.20.0,<1.0.0"
loguru = ">=0.6.0,<1.0.0"
pil-utils = "^0.2.0"
Pillow = "^10.0.0"
toml = "^0.10.2"
fastapi = ">=0.93.0,<1.0.0"
uvicorn = ">=0.20.0,<1.0.0"
python-multipart = ">=0.0.9,<0.1.0,!=0.0.13,!=0.0.14"
filetype = "^1.2.0"
rich = "^13.0.0"
dateparser = "^1.2.0"
qrcode = "^8.0"
typing-extensions = ">=4.4.0,<5.0.0"
arclet-alconna = "^1.8.23,!=1.8.27"
arclet-alconna-tools = "^0.7.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.0"
mypy = "^1.5.1"
ruff = "^0.3.0"

[tool.poetry.scripts]
meme = "meme_generator.cli:main"

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"
defineConstant = { PYDANTIC_V2 = true }

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
